# uniffi-examples

./: .gitignore  404.html  README.md  hashmap.json  index.html  justfile  package.json
.github/workflows/: docs.yaml
1-functions/: justfile
2-structs/calendar-ffi/: Cargo.toml
2-structs/calendar-ffi/src/: calendar.udl  lib.rs
3-enums/calendar-ffi/: uniffi.toml
3-enums/calendar-kotlin/: settings.gradle.kts
4-objects/calendar-ffi/: Cargo.toml  build.rs
4-objects/scripts/: build-macos-aarch64.sh
5-callbacks/calendar-ffi/: Cargo.toml
5-callbacks/calendar-ffi/src/: calendar.udl  lib.rs
6-multiple-libraries/: Cargo.toml
6-multiple-libraries/calendar-ffi/: Cargo.toml  uniffi.toml
6-multiple-libraries/calendar-ffi/src/: calendar.udl  lib.rs
6-multiple-libraries/calendar-kotlin/: build.gradle.kts
6-multiple-libraries/clock/: Cargo.toml  uniffi.toml
6-multiple-libraries/clock-ffi/: Cargo.toml  build.rs  uniffi.toml
6-multiple-libraries/clock-ffi/src/: clock.udl  lib.rs
6-multiple-libraries/scripts/: build-macos-aarch64.sh
6-multiple-libraries/uniffi-bindgen/: Cargo.toml
7-async/calendar-ffi/: Cargo.toml
7-async/calendar-ffi/src/: calendar.udl  lib.rs
assets/: app.0b2856a8.js  app.b7149eba.js  app.b99a53b0.js  build-workflows_final-product.md.1f8e5050.js  build-workflows_final-product.md.1f8e5050.lean.js  build-workflows_final-product.md.229105b0.js  build-workflows_general.md.9507b366.js  build-workflows_general.md.9507b366.lean.js  build-workflows_general.md.f4f5c7c2.js  build-workflows_general.md.f4f5c7c2.lean.js  build-workflows_optimizations.md.4d873319.js  build-workflows_optimizations.md.4d873319.lean.js  build-workflows_optimizations.md.b3959f77.js  build-workflows_optimizations.md.b3959f77.lean.js  build-workflows_optimizations.md.cc572687.js  build-workflows_optimizations.md.cc572687.lean.js  examples_async.md.117b81a1.js  examples_async.md.117b81a1.lean.js  examples_callbacks.md.ed4bec8f.js  examples_callbacks.md.ed4bec8f.lean.js  examples_enums.md.60f272f9.js  examples_enums.md.60f272f9.lean.js  examples_functions.md.6939c4e0.js  examples_functions.md.6939c4e0.lean.js  examples_multiple-libraries.md.d4e7578d.js  examples_multiple-libraries.md.d4e7578d.lean.js  examples_objects.md.b5a0f7a2.js  examples_objects.md.b5a0f7a2.lean.js  examples_structs.md.c40ae252.js  examples_structs.md.c40ae252.lean.js  getting-started_introduction.md.23996602.js  getting-started_introduction.md.23996602.lean.js  getting-started_introduction.md.254f1783.js  getting-started_introduction.md.254f1783.lean.js  getting-started_languages.md.169b5af9.js  getting-started_languages.md.169b5af9.lean.js  getting-started_languages.md.90846ee5.js  index.md.cccda56e.js  index.md.cccda56e.lean.js  index.md.fe4a9851.js  (+2 more)
assets/chunks/: @localSearchIndexroot.742498fb.js  @localSearchIndexroot.766d329f.js  @localSearchIndexroot.c00a5598.js  VPLocalSearchBox.95227454.js  VPLocalSearchBox.cce6a05e.js  (+5 more)
build-workflows/: final-product.html  general.html  optimizations.html
docs/: README.md  index.md  package-lock.json  package.json
examples/: async.html  callbacks.html  enums.html  functions.html  multiple-libraries.html  objects.html  structs.html
getting-started/: introduction.html  languages.html
(+39 files in other folders)
