[package]
name = "calendar-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "calendarffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
uniffi = { version = "0.23.0" }
rand = "0.8.5"

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"] }
