[package]
name = "calendar_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "calendarffi"

[features]
default = ["uniffi/cli"]

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", branch = "main" }
clock_ffi = { path = "../clock-ffi/" }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", branch = "main", features = ["build"] }
