[package]
name = "calendar_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "calendarffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
clock_ffi = { path = "../clock-ffi/" }
uniffi = { version = "=0.28.0" }

[build-dependencies]
uniffi = { version = "=0.28.0", features = ["build"] }
