[package]
name = "clock_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "clock_ffi"

[features]
default = ["uniffi/cli"]

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", branch = "main" }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", branch = "main" , features = ["build"] }
