[package]
name = "calendar-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "calendarffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
uniffi = { version = "0.24.3" }
async-std = "1.12.0"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.24.3", features = ["build"] }
